@@ -56,6 +56,12 @@
 
 #if APR_HAS_DSO
 
+static apr_status_t dso_cleanup(void *thedso)
+{
+    apr_dso_handle_t *dso = thedso;
+    return apr_dso_unload(dso);
+}
+
 APR_DECLARE(apr_status_t) apr_dso_load(apr_dso_handle_t **res_handle, const char *path,
               apr_pool_t *ctx)
 {
@@ -67,6 +73,9 @@ APR_DECLARE(apr_status_t) apr_dso_load(apr_dso_handle_t **res_handle, const char
     *res_handle = apr_pcalloc(ctx, sizeof(*res_handle));
     (*res_handle)->handle = newid;
     (*res_handle)->cont = ctx;
+
+    apr_register_cleanup(ctx, *res_handle, dso_cleanup, apr_null_cleanup);
+
     return APR_SUCCESS;
 }
 
